[package]
name = "moa-memory-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
blake3 = "1"
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-memory-graph = { path = "../moa-memory-graph" }
moa-memory-pii = { path = "../moa-memory-pii" }
moa-memory-vector = { path = "../moa-memory-vector" }
moka = { version = "0.12", features = ["future"] }
metrics.workspace = true
reqwest.workspace = true
restate-sdk.workspace = true
secrecy = "0.10"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "chrono"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
moa-hands = { path = "../moa-hands" }
moa-session = { path = "../moa-session" }
