[package]
name = "moa-orchestrator-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
moa-orchestrator = { path = "../moa-orchestrator" }
moa-brain = { path = "../moa-brain" }
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-memory = { path = "../moa-memory" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }
moa-skills = { path = "../moa-skills" }

async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tokio-cron-scheduler = "0.13"

[dev-dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile = "3"
tracing-subscriber.workspace = true
uuid.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
