[package]
name = "moa-orchestrator-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
moa-orchestrator = { path = "../moa-orchestrator" }
moa-brain = { path = "../moa-brain" }
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-lineage-sink = { path = "../moa-lineage/sink" }
moa-memory-graph = { path = "../moa-memory/graph" }
memory-ingest = { package = "moa-memory-ingest", path = "../moa-memory/ingest" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }

async-trait.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tokio-cron-scheduler = "0.13"

[dev-dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile = "3"
tracing-subscriber.workspace = true
uuid.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
