[package]
name = "moa-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
enum_dispatch = "0.3"
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-orchestrator-local = { path = "../moa-orchestrator-local" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
memory-graph = { package = "moa-memory-graph", path = "../moa-memory-graph" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
