[package]
name = "moa-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
age = "0.11"
async-trait.workspace = true
chrono.workspace = true
globset = "0.4"
moa-core = { path = "../moa-core" }
serde_json.workspace = true
shell-words = "1.1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
